2016-02-05  deadbok  <oblivion@HAL-T60>

 * user: Moved to src.
 * Makefile: Change source dir.
 * build.sh: Build in debug mode.
 * src/driver/button.c: Initialise buttons at the right time.
 * src/main.c (main_task): Wait 5 seconds for config button.
 * src/*: Remove all esp.mk files belonging to old build system.
 * tools/esp-config-tools/src/config.h: Update link.


2016-02-04  deadbok  <oblivion@HAL-T60>

 * .gitignore: Added esp-open-rtos build directories.
			 : Ignore *.old files.
 * README.md: Cloudy.
			: Give more thanks.
 * Makefile: esp-open-rtos style makefile.
 * mk/config.mk: Added hostname.
 * mk/linux.mk: Ported to esp-open-rtos build system.
 * tools/esp-config-tools/src/gen_config.c: Version 0.1.2.
										  : Added calc_chksum to checksum the config data.
										  (main): Added hostname to config. 
										  (main): Added network mode to config.
										  (main): Added checksum.
										  (main): Added espressif style secure shadow copy of config.
 * user/config/config.c: Ported to esp-open-rtos.
					   : Added espressif style secure shadow copy of config.
					   : Added read_flash to read flash gracefully.
					   : Added write_flash to write flash gracefully.
					   : Reimplemented SDK function sdk_system_param_load.
					   : Reimplemented SDK function sdk_system_param_save_with_protect.
 * user/debug.c: Ported to esp-open-rtos.
 * user/driver/button.c: Ported to esp-open-rtos.
 * user/include/driver/button.h: : Ported to esp-open-rtos.

 * user/driver/uart.c: Removed, not needed esp-open-rtos provides this.
 * user/include/driver/uart.h: Removed, not needed esp-open-rtos provides this.
 * 
 * user/fs/int_flash.c: aflash_read renamed flash_aread.
 * user/include/fs/int_flash.h: aflash_read renamed flash_aread.
							  : Added FLASH_SECTOR_SIZE.
 * user/handlers/http/deny/http-deny.c: Include slighttp/http-request.h.
 * user/handlers/websocket/wifiswitch.c: Added ws_wifiswitch_station_parse.