@@ -1,5 +1,11 @@
 include mk/linux.mk
 
+#From: John Graham-Cumming
+#	   http://blog.jgc.org/2011/07/gnu-make-recursive-wildcard-function.html
+#Recursivly finds all files in a directory and all subdirectories
+#rwildcard=$(shell echo "Colecting files $1; $(foreach d,$(wildcard $1*),$(call rwildcard,$d/,$2) $(filter $(subst *,%,$2),$d)))
+rwildcard=$(foreach d,$(wildcard $1*),$(call rwildcard,$d/,$2) $(filter $(subst *,%,$2),$d))
+
 # Project name.
 PROJECT_NAME = wifiswitch
 # Version x.y.z.
@@ -25,26 +31,36 @@ HOSTNAME ?= wifiswitch
 # Directory for generating the file system root. A Makefile is expected
 # reside in this directory, that does whatever is needed, before creating
 # the image.
-FS_DIR := fs/
+FS_DIR = fs/
 # Directory to use, as root, when creating the file system image.
-FS_ROOT_DIR := fs/root_out/
+FS_ROOT_DIR = fs/root_out/
 # Directory to use as source, when generating file system root.
-FS_SRC_DIR := fs/root_src/
+FS_SRC_DIR = fs/root_src/
 # Directory to copy log files of the ESP8266 serial output to.
-LOG_DIR := logs
+LOG_DIR = logs
 # Directory with custom build tools.
-TOOLS_DIR := tools
+TOOLS_DIR = tools
 # Where to put the final firmware binaries.
 FW_BASE = $(PROGRAM_DIR)firmware/
 
+### Firmware image configuration. ###
+ifeq ("$(FLASH_SIZE)","4")
+	# Max size of any of the firmware files. 512Kb / 2 - 4KB at the start - 16Kb at the end.
+	FW_FILE_MAX := 241664
+else 
+	$(error Flash size not supported.)
+endif
+FW_FILE_1_SIZE = $(call filesize,$(FW_FILE_1))
+
 ### File system variables. ###
 # File system image is flashed 4KB aligned just after the resident code.
+FW_FILE_1_SIZE = $(call filesize,$(FW_FILE_1))
 # File system highest possible address (config data comes after).
 FS_END = 0x3b000
 # Maximum image size.
 FS_MAX_SIZE = $(shell printf '%d\n' $$(($(FS_END) - $(FS_FILE_ADDR) - 1)))
 # File system image file name and path.
-FW_FILE_FS = $(FW_BASE)/www.fs
+FW_FILE_FS = $(FW_BASE)/www.dbffs
 # Generate a list of source files for flash file system root.
 FS_SRC_FILES = $(call rwildcard,$(FS_SRC_DIR),*)
 # Generate a list of all files to be included in the flash file system.
@@ -76,12 +92,20 @@ ifdef DEBUG
 	EXTRA_C_CXX_FLAGS += -DDEBUG
 endif
 
+### Build the file system tools. ###
+.PHONY: $(DBFFS_CREATE)
+$(DBFFS_CREATE):
+	$(Q) $(MAKE) -C tools/dbffs-tools all install
+	
 ### ESP8266 firmware binary configuration. ###
 GEN_CONFIG := ./$(TOOLS_DIR)/gen_config $(VFLAG)
 # Build the configuration tools.
 .PHONY: $(GEN_CONFIG)
 $(GEN_CONFIG):
-	$(MAKE) -C tools/esp-config-tools all install
+	$(Q) $(MAKE) -C tools/esp-config-tools all install
 
 # Override esp-open-rtos all target.
-all: $(PROGRAM_OUT) $(FW_FILE_1) $(FW_FILE_2) $(FW_FILE_CONFIG) $(FW_FILE)
+all: $(PROGRAM_OUT) $(FW_FILE_1) $(FW_FILE_2) $(FW_FILE_CONFIG) $(FW_FILE_FS) $(FW_FILE)
+	$(Q) ./$(TOOLS_DIR)/mem_usage.sh $(PROGRAM_OUT) 81920 $(FW_FILE_MAX)
+	$(Q) $(ECHO) File system uses $(FS_SIZE) bytes of ROM, $$(( $(FS_MAX_SIZE) - $(FS_SIZE) )) bytes free of $(FS_MAX_SIZE).
+	$(Q) $(ECHO) Resident firmware size $(FW_FILE_1_SIZE) bytes of ROM, $$(( $(FW_FILE_MAX) - $(FW_FILE_1_SIZE) )) bytes free of $(FW_FILE_MAX).
